Make the code close to Eclipse